<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vmote</string>
    <string name="action_settings">Settings</string>
    
    <!--  erors  -->
    <string name="wrongIP">Veuillez insérer une IP correcte</string>
    <string name="noWifi">Veuillez vous connecter à un réseau Wi-Fi !</string>
    <string name="noVLC">Veuillez lancer VLC !</string>

    
    
    <!-- parameters -->
    <string name="ipCheck">Renseigner IP PC</string>
    <string name="helpVLC">Aide : VLC</string>
    <string name="helpAndroid">Aide : android</string>
    <string name="information">IP de l\'appareil</string>
    <string name="tvHelpInfoIp">X.X.X.X</string>
    <string name="tvHelpInfoLabel">L\'adresse IP de votre smartphone est :</string>
    <string name="tvHelpIpLabel">Veuillez renseigner l\'adresse IP de votre ordinateur :</string>
    <string name="tvInfoIpLabel">Vous utilisez l\'IP : %IP%</string>
    <string name="tvNewIpLabel">Si vous souhaiter la modifier\nrenseigné la nouvelle IP ci-dessous :</string>
    <color name="grey_color">#DDD</color>
    
    <!-- helps -->
    <string name="backHelpBtn">Fermer</string>
    <string name="backSubmitBtn">Modifier</string>
    <string name="tvHelpTextDesktop">
		<![CDATA[
			Pour faire fonctionner cette application avec votre logiciel VLC :<br/>
			<p><b>I.</b> Il faut activer la fonctionnalité web de VLC :</p>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Ouvrez VLC<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Allez dans les préférences de VLC (CTRL + P) ou menu Outils->Préférences<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Affichez la liste complète des options du menu latéral gauche<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4. Sélectionnez le sous-menu interface<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5. Sélectionnez son sous-menu Interface Générale<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6. Cochez la case HTTP<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7. Ecrivez <i>http</i> si ce n\'est pas automatique dans le champ de texte<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8. Sauvegardez<br/>
			<p><b>II.</b> Il faut autoriser votre appareil android à communiquer avec VLC :</p>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Allez dans le répertoire d\'installation de votre lecteur VLC<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Allez dans le répertoire "lua" puis http<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Dans le répertorie http, se trouve un fichier nommé .hosts<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4. Ouvrez ce fichier et ajoutez l\'adresse IP de l\'appareil android sur une nouvelle ligne<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5. L\'ip de votre appareil est affichée dans l\'onglet <i>"IP de l\'appareil"</i> de l\'application<br/>
			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6. Sauvegarder le fichier et redémarrer vlc<br/>
			<p>Félicitation, votre lecteur VLC est configuré pour fonctionner avec<br/>
			votre appareil VLC !</p>
        ]]>
    </string>
    
    <string name="tvHelpTextAndroid">
		<![CDATA[
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Vous devez entrer l\'adresse IP de l\'ordinateur auquel vous souhaiter vous connecter.</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Entrez cette adresse dans le menu "trouver VLC".</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Pour connaître l\'adresse IP de votre ordinateur, ouvrez une console de commande\n
        (sous Windows, allez dans la barre de programme et tapez "cmd", vous devrez ensuite\n
        sélectionner le programme "cmd.exe" ou juste "cmd").</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Une fois la console ouverte, tapez "ifconfig" sous Linux/OS X ou "ipconfig" sous windows\n
        puis valider.</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Votre adresse IP se trouve à la ligne intitulée "IPv4" ou "IP version 4"\n
        C\'est une suite de chiffre de la forme suivante : X.X.X.X</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;Entrez cette adresse IP dans le champ indiqué et valider.</p>
        ]]>
    </string>

    <!-- pages history -->
    <string name="buttonGoToVideoHistory">Vidéo</string>
    <string name="buttonGoToAudioHistory">Audio</string>
    
    
    <!-- pages play -->
    <string name="imageMediaInfo">Image du média</string>
    <string name="buttonGoToDetails">Détails</string>
    <string name="buttonGoToPlay">Lecteur</string>
    <string name="buttonGoToSubtitles">Param.</string>
    
    <!-- details -->
    <string name="detailsPageTitle">Informations sur le média</string>
    <string name="detailsTitleDefault">Titre :</string>
    <string name="detailsDurationDefault">Durée :</string>
	<string name="detailsLengthDefault">Largeur trame :</string>
    <string name="detailsHeightDefault">Hauteur trame :</string>
    <string name="detailsFrameRateDefault">Fréquence d\'image :</string>
    <string name="detailsSpeedDefault">Vitesse de transmission :</string>
    <string name="detailsSamplingDefault">Taux d\'échantillonnage audio :</string>
    <string name="detailsDateDefault">Date :</string>
    <string name="detailsArtistDefault">Artiste :</string>
    <string name="detailsHistoryDefault">Histoire :</string>
    <string name="detailsAlbumDefault">Album :</string>
    <string name="detailsGenderDefault">Genre :</string>
             
    
    <!-- main -->
    <string name="buttonStop">Stop</string>
    <string name="buttonPlay">Lecture</string>
	<string name="buttonBackward">Marche arrière</string>
    <string name="buttonForward">Avance rapide</string>
    <string name="buttonOpen">Ouvrir répertoire</string>    
    <string name="buttonShuffle">Lecture aléatoire</string>
    <string name="buttonRepeat">Répéter</string>
    <string name="buttonMute">Couper son</string>
    
    <!-- subtitles -->
    <string name="subtitlePageTitle">Réglages avancées</string>
    <string name="subtitlePageAudioSelect">Audio</string>
    <string name="subtitlePageSubtitleSelect">Sous-titres</string>
    <string name="subtitlePageSynchroAudio">Synchronisation audio</string>
    <string name="subtitlePageSynchroSubtitle">Synchronisation sous-titres</string>  
    <string name="subtitlePageDefaultSynchro">+ 0 ms</string>  
    <string name="subtitlePageNextArrow">Piste suivante</string>
    <string name="subtitlePagePreviousArrow">Piste précédente</string>
</resources>