<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/playPager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.98" >

    </android.support.v4.view.ViewPager>

    <LinearLayout android:orientation="horizontal"
            android:gravity="center" android:measureWithLargestChild="true"
            android:layout_width="match_parent" 
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_weight="0">
        <Button android:id="@+id/goto_first"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/buttonGoToDetails">
        </Button>
        <Button android:id="@+id/goto_second"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/buttonGoToPlay">
        </Button>
        <Button android:id="@+id/goto_last"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/buttonGoToSubtitles">
        </Button>
    </LinearLayout>
</LinearLayout>