<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/settings_info_layout"
    android:layout_height="match_parent"
    android:background="@color/grey_color"
    >
    
    <Button
        android:id="@+id/btnInfoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/backHelpBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center" />

    <EditText
        android:id="@+id/fieldNewIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfoLabel"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@+id/btnNewIp"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvNewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNewIp"
        android:layout_alignParentLeft="true"
        android:text="@string/tvNewIpLabel" />

    <Button
        android:id="@+id/btnNewIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/fieldNewIp"
        android:text="@string/backSubmitBtn" />

</RelativeLayout>
