<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

	<TableRow
	    android:layout_width="fill_parent"
	    android:layout_marginTop="5dp" 
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginBottom="10dp"
	    android:layout_height="wrap_content"	    
	    >
		<TextView
		    android:id="@+id/subtitlePageTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/subtitlePageTitle"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
	</TableRow>
	
	<TableRow
		android:layout_width="fill_parent" 
		android:layout_marginBottom="5dp"
		android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    	    android:gravity="center"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/details_page_background_text"
	    >
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:paddingTop="5dp" 
		    >
		  <TextView
		      		      android:paddingTop="10dp"
		    android:id="@+id/subtitlePageAudioSelect"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/subtitlePageAudioSelect" />
	    
	    <LinearLayout
	        android:orientation="horizontal"
	        android:id="@+id/audioSelectList"
	        android:layout_width="235dp"
	        android:layout_marginLeft="5dp"
	        android:layout_toRightOf="@+id/subtitlePageAudioSelect"
	        android:layout_height="30dp"
	        >
	        <ImageButton
	            android:src="@drawable/arrow_left"
	            style="?android:attr/buttonBarButtonStyle"
	            android:contentDescription="@string/subtitlePagePreviousArrow"
	            android:id="@+id/audioLeftArrow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        <TextView
			    android:id="@+id/tvAudioList"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	         <ImageButton
	             android:src="@drawable/arrow_right"
	             style="?android:attr/buttonBarButtonStyle"
             	android:contentDescription="@string/subtitlePageNextArrow"
	            android:id="@+id/audioRightArrow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        
	        </LinearLayout>
		</RelativeLayout>
	</TableRow> 
	<TableRow 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="15dp"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:background="@drawable/details_page_background_text"
	    >
		<RelativeLayout
		    android:paddingTop="5dp"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp" 
		    >
		  <TextView 
		      android:paddingTop="10dp"
	        android:id="@+id/subtitlePageSubtitleSelect"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/subtitlePageSubtitleSelect" 
	        />
	    
	    <LinearLayout
	        android:orientation="horizontal"
	        android:id="@+id/subtitleSelectList"
	        android:layout_width="200dp"
	        android:layout_marginLeft="5dp"
	        android:layout_toRightOf="@+id/subtitlePageSubtitleSelect"
	        android:layout_height="30dp"
	        >
	        <ImageButton
	            android:src="@drawable/arrow_left"
	            style="?android:attr/buttonBarButtonStyle"
	            android:contentDescription="@string/subtitlePagePreviousArrow"
	            android:id="@+id/subtitleLeftArrow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        <TextView
			    android:id="@+id/tvSubtitleList"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	         <ImageButton
	             android:src="@drawable/arrow_right"
	             style="?android:attr/buttonBarButtonStyle"
	             android:contentDescription="@string/subtitlePageNextArrow"
	            android:id="@+id/subtitleRightArrow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        </LinearLayout>
		
		</RelativeLayout>
	    
	</TableRow>
	<TableRow 
	    android:paddingLeft="5dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    android:gravity="center"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="20dp"
	    android:background="@drawable/details_page_background_text"
	    >
		<RelativeLayout
		    android:paddingTop="5dp"
		    android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:id="@+id/subtitlePageRelative1" 
		    >
		    <TextView
		        android:paddingTop="5dp"
	            android:id="@+id/subtitlePageSynchroAudio"
	            android:layout_width="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_height="match_parent"
	            android:text="@string/subtitlePageSynchroAudio" />

	    <EditText
	        android:id="@+id/etSubtitlePageSynchroAudio"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_toRightOf="@+id/subtitlePageSynchroAudio"
	        android:text="@string/subtitlePageDefaultSynchro"
	        android:ems="10"
	        android:inputType="numberDecimal" />

	    <SeekBar
	        android:id="@+id/seekBarAudio"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	         android:layout_below="@+id/etSubtitlePageSynchroAudio"
	         android:max="6000"
	         />
		</RelativeLayout>
	        
	</TableRow>
	<TableRow 
	    android:paddingLeft="5dp"
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:background="@drawable/details_page_background_text"
	    >
	    <RelativeLayout
	        android:paddingTop="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:id="@+id/subtitlePageRelative2"
	        >
	     <TextView
	         android:paddingTop="5dp"
		    android:id="@+id/subtitlePageSynchroSubtitle"
		    android:layout_alignParentLeft="true"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/subtitlePageSynchroSubtitle" />

	    <EditText
	        android:id="@+id/etSubtitlePageSynchroSubtitle"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_toRightOf="@+id/subtitlePageSynchroSubtitle"
	        android:text="@string/subtitlePageDefaultSynchro"
	        android:ems="10"
	        android:inputType="numberDecimal" >
	    </EditText>

	     <SeekBar
	         android:id="@+id/seekBarSubtitle"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_below="@+id/etSubtitlePageSynchroSubtitle"
	         android:max="6000"
	         />

	    </RelativeLayout>
	</TableRow>

</TableLayout>